--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ws": "^8.19.0"
   },
   "devDependencies": {
-    "daisyui": "^5.5.18"
+    "daisyui": "^5.5.18",
+    "prisma": "^7.4.1"
   }
 }
