--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev:backend": "node index.js",
+    "dev:backend": "npx nodemon index.js",
     "dev:client": "cd client && npm run dev",
     "install:all": "npm install && cd client && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,15 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "@tailwindcss/postcss": "^4.1.18",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
+    "pg": "^8.18.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
     "daisyui": "^5.5.18",
+    "nodemon": "^3.0.1",
     "prisma": "^7.4.1"
   }
 }
