--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "sweetalert2": "^11.26.18"
+    "sweetalert2": "^11.26.18",
+    "recharts": "^2.6.0",
+    "lucide-react": "^0.575.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
