--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
+    "lucide-react": "^0.575.0",
     "pg": "^8.18.0",
+    "recharts": "^3.7.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
