--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
-    "@prisma/client": "^7.4.1",
     "@tailwindcss/postcss": "^4.1.18",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
     "lucide-react": "^0.575.0",
+    "mysql2": "^3.18.0",
     "pg": "^8.18.0",
     "recharts": "^3.7.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
     "daisyui": "^5.5.18",
-    "nodemon": "^3.0.1",
-    "prisma": "^7.4.1"
+    "nodemon": "^3.0.1"
   }
 }
